fix white space

--- a/docroot/themes/custom/mass_theme/overrides/css/view-data-listing.css
+++ b/docroot/themes/custom/mass_theme/overrides/css/view-data-listing.css
@@ -77,9 +77,12 @@
   }
 }
 
-.data-listing-wrapper .main-content--reversed .sidebar {
-  margin-top: 0;
+.data-listing-wrapper .sidebar {
   padding-bottom: 20px;
+}
+
+#filters--desktop {
+  margin-top: 0;
 }
 
 .data-listing-wrapper .ma__general-teaser {
